@@ -54,8 +54,11 @@ libexempi_la_LIBADD = $(top_builddir)/source/common/libxmpcommon.la \
 	$(top_builddir)/source/XMPFiles/libXMPFiles.la \
 	$(top_builddir)/third-party/MD5/libmd5.la \
 	-lexpat -lz
-libexempi_la_LDFLAGS = -version-info @EXEMPI_VERSION_INFO@ \
-	-Wl,--retain-symbols-file=$(srcdir)/libexempi.sym
+libexempi_la_LDFLAGS = -version-info @EXEMPI_VERSION_INFO@
+
+if HAVE_SYMBOLS_FILE
+libexempi_la_LDFLAGS += -Wl,--retain-symbols-file=$(srcdir)/libexempi.sym
+endif
 
 EXTRA_DIST = libexempi.sym
 
